// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Snapshots should match a snapshot with a title 1`] = `
<div
  className="bg-white rounded shadow-lg p-4 mb-4"
>
  <div
    className="flex flex-row items-center"
  >
    <div
      className="flex-1"
    >
      <h4
        className="uppercase text-center text-red-darker"
      >
        Some title
      </h4>
      Some content!
    </div>
  </div>
</div>
`;

exports[`Card Snapshots should match the default snapshot 1`] = `
<div
  className="bg-white rounded shadow-lg p-4 mb-4"
>
  <div
    className="flex flex-row items-center"
  >
    <div
      className="flex-1"
    >
      Some content!
    </div>
  </div>
</div>
`;
